# copy-files

./: .gitignore  Makefile  README.md  pyproject.toml
copy_files/: __init__.py  cli.py  copy_files.py  log.py
copy_files/scripts/: copy_files.py
tests/: test_copy.py  test_page_loader.py
tests/fixtures/: config.xml  config2.xml
tests/fixtures/1/: Krug S. Круг С. - Не заставляйте меня думать
tests/fixtures/6/: Фейнман Р. - Вы, конечно, шутите, мистер Фейнман! - (Великие учёные и их открытия) - 2016.fb2
