[tool.poetry]
name = "copy-files-skornienko"
version = "0.2.2"
description = ""
authors = ["Sergey Kornienko <skornienko29@gmail.com>"]
packages = [
  { include = "copy_files" },
]

[tool.poetry.dependencies]
python = "^3.8"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
twine = "^3.4.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
copy-files = "copy_files.scripts.copy_files:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = "ignore::DeprecationWarning"